3.1 refactor full plugin